css_template/admin.css
/* ... */
.navbar-inner {
	margin-bottom: 0px;
  	min-height: 40px;
  	padding-right: 20px;
  	padding-left: 20px;
	background: #080808;
	filter: none;
	text-shadow: 1px 1px 1px #0a0c0e;
	border: none;
	color: #fff;
  	-webkit-border-radius: 0px;
       -moz-border-radius: 0px;
          	border-radius: 0px;
  	*zoom: 1;
	border-bottom: 1px solid #38383D; /* rgba(0, 0, 0, 0.05); */
	
}

.navbar-inner a {
	color: #7b7b7b;
	text-shadow: 0 -1px 1px #0b090a;
}

.navbar-inner a i {
	margin-top: 2px;
}

.navbar-inner a:hover i {
	opacity: .8;
	filter: alpha(opacity=80);
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
}

.brand img {
	margin: -12px 0px -5px 0px;
}

a.brand span {
	color: #fff;
	text-shadow: none;
}

.header-nav {
	padding: 0px;
	color: #fff !important;
	background: #000 !important;
}

.header-nav .nav {
	margin: 0px;
}
.header-nav .btn {
  	display: inline-block;
  	padding: 21px 20px;
	margin-top: 0px;
  	margin-left: 0px;
  	font-size: 14px;
  	line-height: 20px;
  	text-align: center;
  	text-shadow: none;
  	vertical-align: middle;
  	cursor: pointer;
  	background: transparent;
  	border-left: none;
	border-right: none;
	border-top: 0px;
	border-bottom: 0px;
  	-webkit-border-radius: 0px;
       -moz-border-radius: 0px;
          	border-radius: 0px;
  	-webkit-box-shadow: none !important;
       -moz-box-shadow: none !important;
          	box-shadow: none !important;
}

.header-nav a.btn  {
	color: #fff !important;
	text-shadow: none !important;
	padding: 15px 25px !important;
}

.header-nav .btn .caret {
	border-top-color: #fff !important;
	border-bottom-color: #fff !important;
}

.header-nav .btn:hover .caret {
	border-top-color: #fff !important;
	border-bottom-color: #fff !important;
}

/* Navigation Section
=================================================================== */

#sidebar-left {
	background: #1C2B36;
	z-index: 1;
}

.sidebar-nav > ul{
	margin: 0px;
	padding-bottom: 1px;
	font-size: 14px;
}

.sidebar-nav > ul > li > ul {
	list-style: none;
	margin: 0px;
	display: none;
	background: rgba(0,0,0,.25);
}

.nav-tabs.nav-stacked>li>a:hover, .nav-tabs.nav-stacked>li>a:focus {
	background: rgba(0,0,0,.25) !important;
}

.nav-tabs.nav-stacked > li > a,
.nav-tabs.nav-stacked > li > ul > li > a {
	padding: 15px 10px 14px 10px;
	color: #fff;
	border-top: none;
  	border-bottom: 1px solid transparent;
	border-left: none;
	border-right: none;
	text-decoration: none;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;		
}

.nav-tabs.nav-stacked > li:last-child > a {
  	border-bottom: 1px solid transparent;		
}

.nav-tabs.nav-stacked > li > ul > li > a{
	padding: 15px 10px 14px 10px;
	display: block;
}

.nav-tabs.nav-stacked > li > a > i,
.nav-tabs.nav-stacked > li > ul > li > a > i {
	opacity: 1;
	filter: alpha(opacity=100);
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
	font-size: 16px;
}

.nav-tabs.nav-stacked > li > ul > li > a > i {
	font-size: 20px;
}

.nav-tabs.nav-stacked > li > a:hover > i {
	opacity: 1;
	filter: alpha(opacity=100);
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
}

.nav-tabs.nav-stacked > li > a:hover,
.nav-tabs.nav-stacked > li > ul > li > a:hover {
  	color: #fff;
	background-color: #080808;
}

.nav-tabs.nav-stacked  > li.active > a,
.nav-tabs.nav-stacked  > li > ul > li.active > a {
  	background: #578EBE;
	border-bottom: 1px solid #578EBE;
}

.nav-tabs.nav-stacked  > li.active > a:hover,
.nav-tabs.nav-stacked  > li > ul > li.active > a:hover {
  	background: #578EBE;
	color: #fff;
	border: none;
	border-bottom: 1px solid #578EBE;
}
.header-nav .nav li:hover{
background: #3A3A3A;
}
.dropdown:hover .dropdown-menu {
    display: block;
 }
.nav-tabs.nav-stacked>li>a:hover, .nav-tabs.nav-stacked>li>a:focus {
z-index: 2;
border-bottom: 1px solid transparent;
}
.nav-tabs.nav-stacked  > li.active > ul {
	padding: 5px 0px;
  	color: #3b3b41;
  	background: #fff;
}

.nav-tabs.nav-stacked > li:first-child > a {
	margin: 0px 0px 0px 0px;
  	-webkit-border-radius: 0px;
       -moz-border-radius: 0px;
          	border-radius: 0px;
}

.nav-tabs.nav-stacked > li:last-child > a {
  	-webkit-border-radius: 0px;
       -moz-border-radius: 0px;
          	border-radius: 0px;
}

.navbar .nav li.dropdown.open > .dropdown-toggle,
.navbar .nav li.dropdown.active > .dropdown-toggle,
.navbar .nav li.dropdown.open.active > .dropdown-toggle {
  	color: #555555;
  	background-color: #000;
  	outline: 0;
	-webkit-box-shadow: none;
       -moz-box-shadow: none;
            box-shadow: none;
}

.dropdown-menu:after,
.dropdown-menu:before {
	top: -1px;
	left: 10px;
	border-right: 9px solid transparent;
	border-bottom: 9px solid #222 !important;
	border-left: 9px solid transparent;
	content: '';
}

.dropdown-menu {
	border-top: 5px solid transparent;
  	position: absolute;
  	top: 100%;
  	left: 0;
  	z-index: 1000;
  	display: none;
  	float: left;
  	min-width: 160px;
	max-width: 300px;
  	padding: 0px 0;
  	margin: 0px 0 0 0;
  	list-style: none;
	text-shadow: none;
  	-webkit-border-radius: 0px;
       -moz-border-radius: 0px;
          	border-radius: 0px;
  	-webkit-box-shadow: none;
       -moz-box-shadow: none;
            box-shadow: none;	
}

.dropdown-menu.pull-right {
  	right: 0;
  	left: auto;
}

.dropdown-menu .divider {
  	*width: 100%;
  	height: 1px;
  	margin: 0px 1px;
  	*margin: -5px 0 5px;
  	overflow: hidden;
  	background-color: #eee;
  	border-bottom: 1px solid #ffffff;
}

.dropdown-menu li a {
  	display: block;
  	padding: 7px 10px !important;
  	clear: both;
  	font-weight: normal;
  	line-height: 20px;
  	color: #000;
	text-shadow: none;
  	white-space: normal !important;
}

.dropdown-menu li {
	border-bottom: 1px solid #eee;
}

.dropdown-menu li:first-child {
	border-top: 0px !important;
}

.dropdown-menu li:last-child {
	border-bottom: 0px !important;
}
/* ... */

